--- a/index.html
+++ b/index.html
@@ -1,6 +1,25 @@
 <!doctype html>
 <html>
   <head>
+
+    <nav class="mobile-nav show-on-mobiles">
+        <ul>
+      <li class="">
+        <a href="/">Overview</a>
+      </li>
+      <li class="current">
+        <a href="http://www.google.com/">Doc<span class="show-on-mobiles">s</span><span class="hide-on-mobiles">umentation</span></a>
+      </li>
+      <li class="">
+        <a href="/news/">News</a>
+      </li>
+      <li class="">
+        <a href="https://github.com/jekyll/jekyll"><span class="hide-on-mobiles">View on </span>GitHub</a>
+      </li>
+    </ul>
+
+  </nav>
+
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
     <title>Kellen Mace by kellenmace</title>
