Redesigned site using bootstrap as the framework

--- a/about.html
+++ b/about.html
@@ -45,9 +45,9 @@
         </div>
         <div class="navbar-collapse collapse">
           <ul class="nav navbar-nav">
-            <li class="active"><a href="index.html">Home</a></li>
+            <li><a href="index.html">Home</a></li>
             <li><a href="work.html">Work</a></li>
-            <li><a href="about.html">About</a></li>
+            <li class="active"><a href="about.html">About</a></li>
             <li><a href="contact.html">Contact</a></li>
           </ul>
         </div><!--/.nav-collapse -->
@@ -58,19 +58,12 @@
 
       <!-- Main jumbotron for a primary marketing message or call to action -->
       <div class="jumbotron">
-        <h1>Why, Hello</h1>
-        <p>Kellen here. I'm a freelance web developer who is passionate about what I do, and always anxious to tackle new and interesting projects. I work directly with charming clients from around the world, and also assist agencies in delivering great websites and digital products for theirs.</p>
+        <h1>What <em>about</em> me?</h1>
+        <div id="profile">
+          <img src="images/profile_photo.png" alt="Profile Photo" />
+          <p>I was born Toronto, but was raised in East Michigan. After I met my adoring wife, we lived in Colorado for a short time, only to trace our roots back home and settle Rochester Hills, Michigan. When not slinging code, I love to make music on guitars, drum kit, keyboards and in digital audio workstations like Reason, Pro Tools and Logic. I also like to read quite a lot about technology, nutrition and science. I'm also a big fan of the marvelous WordPress community of developers and designers that I am priviledged to be a part of.</p>
+        </div>
       </div>
-
-      <!-- Home page text -->
-      <div class="page-header">
-        <h1>Development Skills</h1>
-      </div>
-      <p>HTML5, CSS3, Javascript/jQuery, PHP, MySQL, WordPress</p>
-      <div class="page-header">
-        <h1>Design Skills</h1>
-      </div>
-      <p>Desktop &amp; Mobile UI, UX</p>
 
       <!-- Footer printer's Mark -->
       <div id="km-footer" class="row text-center top-buffer bottom-buffer">
