--- a/contact.html
+++ b/contact.html
@@ -45,10 +45,10 @@
         </div>
         <div class="navbar-collapse collapse">
           <ul class="nav navbar-nav">
-            <li class="active"><a href="index.html">Home</a></li>
+            <li><a href="index.html">Home</a></li>
             <li><a href="work.html">Work</a></li>
             <li><a href="about.html">About</a></li>
-            <li><a href="contact.html">Contact</a></li>
+            <li class="active"><a href="contact.html">Contact</a></li>
           </ul>
         </div><!--/.nav-collapse -->
       </div>
@@ -58,19 +58,12 @@
 
       <!-- Main jumbotron for a primary marketing message or call to action -->
       <div class="jumbotron">
-        <h1>Why, Hello</h1>
-        <p>Kellen here. I'm a freelance web developer who is passionate about what I do, and always anxious to tackle new and interesting projects. I work directly with charming clients from around the world, and also assist agencies in delivering great websites and digital products for theirs.</p>
+        <h1>Throw me a bone</h1>
+        <p>Drop me a line below with any thoughts or questions you have. Thanks!</p>
       </div>
 
-      <!-- Home page text -->
-      <div class="page-header">
-        <h1>Development Skills</h1>
-      </div>
-      <p>HTML5, CSS3, Javascript/jQuery, PHP, MySQL, WordPress</p>
-      <div class="page-header">
-        <h1>Design Skills</h1>
-      </div>
-      <p>Desktop &amp; Mobile UI, UX</p>
+      <!-- Contact Form -->
+      <iframe id="km-contact-form" src="https://docs.google.com/forms/d/1ZqtZeZJjcYPzPQRCgF82VvCIGOqy_EeMQ1Inw6MZJyc/viewform?embedded=true" width="760" height="405" frameborder="0" marginheight="0" marginwidth="0" scrolling="no">Loading...</iframe>
 
       <!-- Footer printer's Mark -->
       <div id="km-footer" class="row text-center top-buffer bottom-buffer">
