fixed spelling error and added twitter handle to site

--- a/contact.html
+++ b/contact.html
@@ -59,7 +59,7 @@
       <!-- Main jumbotron for a primary marketing message or call to action -->
       <div class="jumbotron">
         <h1>Throw me a bone</h1>
-        <p>Drop me a line below with any thoughts or questions you have. Thanks!</p>
+        <p>Drop me a line below with any thoughts or questions you have. I'm also on Twitter at @kellenmace. Thanks!</p>
       </div>
 
       <!-- Contact Form -->
