--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
       <div class="page-header">
         <h1>Development Skills</h1>
       </div>
-      <p>HTML5, CSS3, Javascript/jQuery, PHP, MySQL, WordPress</p>
+      <p>HTML5, CSS3, JavaScript/jQuery, PHP, MySQL, WordPress</p>
       <div class="page-header">
         <h1>Design Skills</h1>
       </div>
