Updated paragraph wording

--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -59,7 +58,7 @@
       <!-- Main jumbotron for a primary marketing message or call to action -->
       <div class="jumbotron">
         <h1>Why, Hello</h1>
-        <p>Kellen here. I'm a freelance web developer who is passionate about what I do, and always anxious to tackle new and interesting projects. I work directly with charming clients from around the world, and also assist agencies in delivering great websites and digital products for theirs.</p>
+        <p>Kellen here. I'm a freelance web developer who is passionate about what I do, and always anxious to tackle new and interesting projects. I work with many charming clients directly, and also assist agencies with delivering great websites and digital products for theirs.</p>
       </div>
 
       <!-- Home page text -->
