--- a/work.html
+++ b/work.html
@@ -63,10 +63,16 @@
 
       <!-- Work page text -->
       <div class="page-header">
+div class="page-header">
+        <h1><a href="http://glowintheparkrun.com/" target="_blank" alt="Glow in the Park Run">GlowInTheParkRun.com</a></h1>
+      </div>
+      <div class="well">
+        <p>Website built for Greensboro, NC based Trivium Racing to showcase their very fun Glow in the Park night time race series</p>
+      </div>
         <h1><a href="http://bootlegger5k.com/" target="_blank" alt="Bootlegger5k.com">Bootlegger5k.com</a></h1>
       </div>
       <div class="well">
-        <p>A website built for Greensboro, NC based Trivium Racing to showcase their very fun Bootlegger 5k Trail Run.</p>
+        <p>A website built for Trivium Racing to showcase their very fun Bootlegger 5k Trail Run.</p>
       </div>
       <div class="page-header">
         <h1><a href="http://meghanmace.com/" target="_blank" alt="MeghanMace.com">MeghanMace.com</a></h1>
