--- a/work.html
+++ b/work.html
@@ -63,7 +63,7 @@
 
       <!-- Work page text -->
       <div class="page-header">
-div class="page-header">
+<div class="page-header">
         <h1><a href="http://glowintheparkrun.com/" target="_blank" alt="Glow in the Park Run">GlowInTheParkRun.com</a></h1>
       </div>
       <div class="well">
