--- a/work.html
+++ b/work.html
@@ -72,7 +72,7 @@
         <h1><a href="http://bootlegger5k.com/" target="_blank" alt="Bootlegger5k.com">Bootlegger5k.com</a></h1>
       </div>
       <div class="well">
-        <p>A website built for Trivium Racing to showcase their very fun Bootlegger 5k Trail Run.</p>
+        <p>Another website built for Trivium Racing for their 1920s prohibition era rum running Bootlegger 5k trail race.</p>
       </div>
       <div class="page-header">
         <h1><a href="http://meghanmace.com/" target="_blank" alt="MeghanMace.com">MeghanMace.com</a></h1>
